Output_Folder/test_error702910309772184605.txt
test.java:6: error: unreported exception IOException; must be caught or declared to be thrown
        int n = Integer.parseInt(br.readLine());
                                            ^
1 error
